# Assessing-the-role-of-non-linear-contact-mechanics-for-flow-in-fractures---Code

./: ReadMe.MD
dune_implementation/: delete_build.sh  optim_1.opts
dune_implementation/dune-functions/: CHANGELOG.md  CMakeLists.txt  COPYING  README  TODO.md  config.h.cmake  dune-functions.pc.in  dune.module
dune_implementation/dune-functions/dune/functions/common/: CMakeLists.txt  callable.hh  defaultderivativetraits.hh  differentiablefunction.hh  differentiablefunction_imp.hh  differentiablefunctionfromcallables.hh  functionconcepts.hh  functionfromcallable.hh  indexaccess.hh  interfaces.hh  localfunction.hh  localfunction_imp.hh  optional.hh  polymorphicsmallobject.hh  reserveddeque.hh  signature.hh  staticforloop.hh  treedata.hh  tuplevector.hh  type_traits.hh  typeerasure.hh  utility.hh
dune_implementation/dune-functions/dune/functions/common/test/: CMakeLists.txt  differentiablefunctiontest.cc
dune_implementation/dune-functions/dune/functions/functionspacebases/: CMakeLists.txt  basistags.hh  bsplinebasis.hh  compositebasis.hh  concepts.hh  defaultglobalbasis.hh  defaultlocalindexset.hh  defaultlocalview.hh  defaultnodetorangemap.hh  flatmultiindex.hh  flatvectorbackend.hh  hierarchicvectorwrapper.hh  interpolate.hh  lagrangebasis.hh  lagrangedgbasis.hh  nodes.hh  powerbasis.hh  pq1nodalbasis.hh  pqknodalbasis.hh  rannacherturekbasis.hh  raviartthomasbasis.hh  sizeinfo.hh  subspacebasis.hh  subspacelocalview.hh  taylorhoodbasis.hh
dune_implementation/dune-functions/dune/functions/functionspacebases/test/: CMakeLists.txt  basistest.hh  compositebasistest.cc  gridviewfunctionspacebasistest.cc  hierarchicvectorwrappertest.cc  rannacherturekbasistest.cc  taylorhoodbasistest.cc
dune_implementation/dune-functions/dune/functions/gridfunctions/: CMakeLists.txt  analyticgridviewfunction.hh  discreteglobalbasisfunction.hh  gridfunction.hh  gridfunction_imp.hh  gridviewentityset.hh  gridviewfunction.hh  localderivativetraits.hh
dune_implementation/dune-functions/dune/functions/gridfunctions/test/: CMakeLists.txt  analyticgridviewfunctiontest.cc  discreteglobalbasisfunctiontest.cc  gridfunctiontest.cc  gridfunctiontest.hh  localfunctioncopytest.cc
dune_implementation/dune-functions/examples/: CMakeLists.txt  advection-reaction-dg.cc  poisson-mfem.cc  poisson-pq2.cc  stokes-taylorhood.cc
dune_implementation/dune-uggrid/gm/: gm.h  (+1 more)
dune_implementation/implementation_interface/: CMakeLists.txt  README.md  dune.module  link.txt  myimplementation.pc.in  optim.opts
postprocessing_characteristic_properties/: characteristic_properties.py
simulation_files_paper/normal_stress_0.001_b1/: hd_simulation.hh  pressure_controlled_b2.inp
simulation_files_paper/normal_stress_0.001_b2/: bc_p_b2.hh  hd_simulation.hh  hybrid_dimensional_ax_nonlinear_div_normal_stiffness.hh  pressure_controlled_b2.inp
simulation_files_paper/normal_stress_10_b2/: bc_p_b2.hh  pressure_controlled_b2.inp
simulation_files_paper/normal_stress_20_b1/: bc_p_b2.hh
simulation_files_paper/normal_stress_20_b2/: bc_p_b2.hh  hybrid_dimensional_ax_nonlinear_div_normal_stiffness.hh  pressure_controlled_b2.inp
simulation_files_paper/normal_stress_30_b1/: hybrid_dimensional_ax_nonlinear_div_normal_stiffness.hh
(+2481 files in other folders)
